# forterp

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  Y.TMP  pyproject.toml
.githooks/: README.md  pre-commit
.github/workflows/: pages.yml  release.yml  tests.yml
bench/: README.md  _runner.py  bench.py  history.json
bench/cases/: FFTBM.FOR  LOOP.FOR
demos/: ASTRO.FOR  CHARTR.FOR  EISPACK.FOR  EXAMPLE1.FOR  EXAMPLE2.FOR  EXAMPLE3.FOR  EXAMPLE4.FOR  LIFE.FOR  LINPACK.FOR  NORMAL.FOR  README.md  WGMM11.FOR  WKDAY.FOR
docs/: API.md  CLI.md  DESIGN.md  FORTRAN66.md  FORTRAN77.md  LICENSE.md  README.md
docs/forterp/: 01-getting-started.md  02-cli.md  03-interactive.md  04-running-embedding.md  05-targets-dialects.md  06-host-routines.md  07-instrumentation-errors.md  08-architecture.md  09-memory-model.md  10-control-io.md  11-seams-intrinsics.md  12-internals-reference.md  13-testing.md  14-maintaining.md  README.md
docs/fortran66/: 01-purpose-scope.md  02-terminology.md  03-program-form.md  04-data-types.md  05-identification.md  06-expressions.md  07-statements.md  08-procedures.md  09-programs.md  10-relationships.md  A-intrinsics.md  B-character-set.md  C-forterp-extensions.md  README.md
docs/fortran77/: 01-overview.md  02-language-elements.md  03-source-form.md  04-data-types.md  05-arrays-substrings.md  06-expressions.md  07-statements.md  08-specification.md  09-data.md  10-assignment.md  11-control.md  12-io.md  13-format.md  14-main-program.md  15-procedures.md  16-block-data.md  17-association.md  18-scopes.md  A-intrinsics.md  B-edit-descriptors.md  C-precedence-ascii.md  D-forterp-extensions.md  E-differences-f66.md  README.md
examples/: README.md  dialects.py  fortran_as_kernel.py  parse_and_inspect.py  run_and_capture.py  targets.py
gh-pages/: build_site.py  site.json
gh-pages/assets/: site.css
gh-pages/public/: index.html
gh-pages/public/api/: index.html
gh-pages/public/assets/: site.css
gh-pages/public/changelog/: index.html
gh-pages/public/cli/: index.html
gh-pages/public/design/: index.html
gh-pages/public/docs/: index.html
gh-pages/public/forterp/: index.html
gh-pages/public/forterp/01-getting-started/: index.html
gh-pages/public/forterp/02-cli/: index.html
gh-pages/public/forterp/03-interactive/: index.html
gh-pages/public/forterp/04-running-embedding/: index.html
gh-pages/public/forterp/05-targets-dialects/: index.html
gh-pages/public/forterp/06-host-routines/: index.html
gh-pages/public/forterp/07-instrumentation-errors/: index.html
gh-pages/public/forterp/08-architecture/: index.html
gh-pages/public/forterp/09-memory-model/: index.html
gh-pages/public/forterp/10-control-io/: index.html
gh-pages/public/forterp/11-seams-intrinsics/: index.html
gh-pages/public/forterp/12-internals-reference/: index.html
gh-pages/public/forterp/13-testing/: index.html
gh-pages/public/forterp/14-maintaining/: index.html
gh-pages/public/fortran77/: index.html
gh-pages/public/fortran77/01-overview/: index.html
gh-pages/public/fortran77/02-language-elements/: index.html
gh-pages/public/fortran77/03-source-form/: index.html
gh-pages/public/fortran77/04-data-types/: index.html
gh-pages/public/fortran77/05-arrays-substrings/: index.html
gh-pages/public/fortran77/06-expressions/: index.html
gh-pages/public/fortran77/07-statements/: index.html
gh-pages/public/fortran77/08-specification/: index.html
gh-pages/public/fortran77/09-data/: index.html
gh-pages/public/fortran77/10-assignment/: index.html
gh-pages/public/fortran77/11-control/: index.html
gh-pages/public/fortran77/12-io/: index.html
gh-pages/public/fortran77/13-format/: index.html
gh-pages/public/fortran77/14-main-program/: index.html
gh-pages/public/fortran77/15-procedures/: index.html
gh-pages/public/fortran77/16-block-data/: index.html
gh-pages/public/fortran77/17-association/: index.html
gh-pages/public/fortran77/18-scopes/: index.html
gh-pages/public/fortran77/A-intrinsics/: index.html
gh-pages/public/fortran77/B-edit-descriptors/: index.html
gh-pages/public/license/: index.html
gh-pages/public/reference/: index.html
gh-pages/templates/: doc.html  home.html  page.html
src/f66/: __init__.py  ast_nodes.py  diagnostics.py  dialect.py  engine.py  fmt.py  forbin.py  forlib.py  lexer.py  parser.py  source.py  target.py
src/forterp/: __init__.py  __main__.py  ast.py  ast_nodes.py  cli.py  command.py  debug.py  diagnostics.py  dialect.py  engine.py  fmt.py  forbin.py  forlib.py  format.py  frontend.py  hostlib.py  interpreter.py  intrinsics.py  lexer.py  monitor.py  parser.py  refs.py  repl.py  runtime.py  source.py  target.py  uuolib.py  wordmem.py
tests/: conftest.py  fcvs_runner.py  test_arg_assoc.py  test_arithmetic.py  test_bounds.py  test_cli.py  test_command.py  test_complex.py  test_control_flow.py  test_conversions.py  test_debug.py  test_diagnostics.py  test_dialect.py  test_error_handling.py  test_f66_conformance.py  test_f66_features.py  test_f77.py  test_f77_audit.py  test_f77_strict.py  test_fcvs77_conformance.py  test_fcvs77_golden.py  test_fcvs_conformance.py  test_fcvs_f66_conformance.py  test_fcvs_f77_conformance.py  test_fcvs_golden.py  test_forbin.py  test_format.py  test_format_descriptors.py  test_free_crlf.py  test_frontend_v5.py  test_hostlib.py  test_interpreter.py  test_intrinsics.py  test_io_correctness.py  test_logical_model.py  test_math_intrinsics.py  test_monitor.py  test_native_target.py  test_numeric_edges.py  test_packed_ascii.py  (+12 more)
tests/fcvs/: FM201.FOR  FM203.FOR  FM204.FOR  FM205.FOR  FM251.FOR  FM252.FOR  FM253.FOR  FM254.FOR  FM255.FOR  FM256.FOR  FM300.FOR  FM301.FOR  FM302.FOR  FM306.FOR  FM308.FOR  FM317.FOR  FM411.FOR  FM413.FOR  FM509.FOR  FM514.FOR  FM520.FOR  FM701.FOR  FM710.FOR  FM715.FOR  FM718.FOR  FM719.FOR
tests/fcvs77/: FM200.FOR  FM202.FOR  FM257.FOR  FM307.FOR  FM311.FOR  FM328.FOR  FM351.FOR  FM352.FOR  FM401.FOR  FM402.FOR  FM517.FOR  FM700.FOR  FM711.FOR  FM722.FOR
tests/fcvs77_golden/: regenerate.py
tests/fcvs_golden/: FM257.out  FM907.out  regenerate.py
(+16 files in other folders)
