[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forterp"
version = "0.1.0"
description = "A faithful FORTRAN-66 / DEC FORTRAN-10 interpreter in Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nicholas J. Kisseberth" }]
keywords = ["fortran", "fortran66", "fortran-10", "pdp-10", "interpreter", "retrocomputing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Interpreters",
    "Topic :: System :: Emulators",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
pyf66 = "forterp.cli:f66_main"          # run as strict ANSI FORTRAN-66
pyfortran10 = "forterp.cli:f10_main"    # run as DEC FORTRAN-10 (the DEC superset)
forterp = "forterp.cli:main"            # general driver: --std f66|fortran10

[project.urls]
Homepage = "https://github.com/nkissebe/forterp"
Source = "https://github.com/nkissebe/forterp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# Formatting follows `ruff format` (the Black-compatible standard); run it before commit.
[tool.ruff]
line-length = 100

[tool.ruff.lint]
# pyflakes (F) catches real defects; pycodestyle E/W catch genuine issues. No ignores:
# the codebase was normalized with `ruff format` and the few ambiguous names renamed,
# so the full standard set passes clean.
select = ["E", "F", "W"]
