[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forterp"
dynamic = ["version"]  # single source: forterp.__version__ in src/forterp/__init__.py
description = "A faithful FORTRAN-66 / DEC FORTRAN-10 interpreter in Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nicholas J. Kisseberth", email = "nkissebe@gmail.com" }]
keywords = ["fortran", "fortran66", "fortran-10", "pdp-10", "interpreter", "retrocomputing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: System :: Emulators",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
pyf66 = "forterp.cli:f66_main"          # run as strict ANSI FORTRAN-66
pyfortran10 = "forterp.cli:f10_main"    # run as DEC FORTRAN-10 (the DEC superset)
forterp = "forterp.cli:main"            # general driver: --std f66|fortran10

[project.urls]
Homepage = "https://github.com/nyxcraft/forterp"
Documentation = "https://nyxcraft.github.io/forterp/"
Source = "https://github.com/nyxcraft/forterp"
Issues = "https://github.com/nyxcraft/forterp/issues"
Changelog = "https://github.com/nyxcraft/forterp/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "forterp.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# Formatting follows `ruff format` (the Black-compatible standard); run it before commit.
[tool.ruff]
line-length = 100

[tool.ruff.lint]
# pyflakes (F) catches real defects; pycodestyle E/W catch genuine issues. No ignores:
# the codebase was normalized with `ruff format` and the few ambiguous names renamed,
# so the full standard set passes clean.
select = ["E", "F", "W"]
