[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forterp"
dynamic = ["version"]  # single source: forterp.__version__ in src/forterp/__init__.py
description = "A FORTRAN 77 / 66 / DEC FORTRAN-10 interpreter in Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nicholas J. Kisseberth", email = "nkissebe@gmail.com" }]
keywords = ["fortran", "fortran77", "fortran66", "f77", "f66", "fortran-10", "pdp-10", "interpreter", "retrocomputing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: System :: Emulators",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
docs = ["markdown-it-py"]  # to rebuild the gh-pages site (gh-pages/build_site.py)

[project.scripts]
pyf66 = "forterp.cli:f66_main"          # run as strict ANSI FORTRAN-66
pyf77 = "forterp.cli:f77_main"          # run as ANSI FORTRAN 77
pyfortran10 = "forterp.cli:f10_main"    # run as DEC FORTRAN-10 (the DEC superset)
forterp = "forterp.cli:main"            # general driver: --std f66|f77|fortran10

[project.urls]
Homepage = "https://github.com/nyxcraft/forterp"
Documentation = "https://nyxcraft.github.io/forterp/"
Source = "https://github.com/nyxcraft/forterp"
Issues = "https://github.com/nyxcraft/forterp/issues"
Changelog = "https://github.com/nyxcraft/forterp/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "forterp.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# Formatting follows `ruff format` (the Black-compatible standard); run it before commit.
[tool.ruff]
line-length = 100

[tool.ruff.lint]
# pyflakes (F) catches real defects; pycodestyle E/W catch genuine issues; isort (I) keeps
# imports ordered; RUF100 flags stale `# noqa`. No ignores -- the codebase is normalized with
# `ruff format` and the few ambiguous names renamed, so this set passes clean. (UP/pyupgrade
# is deliberately omitted: PEP-604 rewrites would break the requires-python = ">=3.9" floor.)
select = ["E", "F", "W", "I", "RUF100"]
